Several updates
* zshrc starts tmux automatically
* leiningen user profile sets jvm-opts
* Adds emacs bind key to magit-dispatch-popup
* Show commands as they are being typed in Vim