@@ -1,5 +1,6 @@
 {:user
- {:plugins [[lein-exec "0.3.1"]
+ {:jvm-opts ["-Xmx1024m", "-XX:PermSize=512m", "-XX:MaxPermSize=1024m"]
+  :plugins [[lein-exec "0.3.1"]
             [lein-pprint "1.1.1"]
             [codox "0.8.10"]
             [lein-environ "1.0.0"]
